hard-gists/825970/run.log
=== Docker Run Log for 825970 ===
Started at: Mi 29. Okt 17:41:43 CET 2025

[2025-10-29 17:41:43] START: Running container for 825970
[2025-10-29 17:41:43] SUCCESS: Container b928de108e18d30d7917cc7999e120e4336d6ecb7bd9c73863720df34a338d2e started for 825970
=== Container logs for 825970 ===
  File "/snippet.py", line 80
    print sys.modules[__name__]
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 825970 ===
[2025-10-29 17:41:45] INFO: Container b928de108e18d30d7917cc7999e120e4336d6ecb7bd9c73863720df34a338d2e has stopped
